@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2015-2016 Simple Injector Contributors
+ * Copyright (c) 2015-2017 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -25,16 +25,25 @@ namespace SimpleInjector
     using System;
     using Lifestyles;
     using Microsoft.AspNetCore.Builder;
+    using Microsoft.AspNetCore.Hosting;
+    using Microsoft.AspNetCore.Http;
+    using Microsoft.Extensions.DependencyInjection;
 
     /// <summary>
     /// Extension methods for integrating Simple Injector with ASP.NET applications.
     /// </summary>
     public static class SimpleInjectorAspNetCoreIntegrationExtensions
     {
-        /// <summary>Wraps an ASP.NET request in a execution context scope.</summary>
+        /// <summary>Wraps ASP.NET requests in an <see cref="AsyncScopedLifestyle"/>.</summary>
         /// <param name="applicationBuilder">The ASP.NET application builder instance that references all
         /// framework components.</param>
         /// <param name="container">The container.</param>
+        [Obsolete(nameof(UseSimpleInjectorAspNetRequestScoping) + "(IApplicationBuilder, Container) " +
+            "is deprecated. Please use " + 
+            nameof(UseSimpleInjectorAspNetRequestScoping) + "(IServiceCollection, Container) " +
+            "instead. This new overload can be called from within the ConfigureServices method of the " +
+            "Startup class. See https://simpleinjector.org/aspnetcore for more information.", error: false)]
+        [System.ComponentModel.EditorBrowsable(System.ComponentModel.EditorBrowsableState.Never)]
         public static void UseSimpleInjectorAspNetRequestScoping(this IApplicationBuilder applicationBuilder,
             Container container)
         {
@@ -55,6 +64,120 @@ namespace SimpleInjector
                     await next();
                 }
             });
+        }
+
+        /// <summary>Wraps ASP.NET requests in an <see cref="AsyncScopedLifestyle"/>.</summary>
+        /// <param name="services">The ASP.NET application builder instance that references all
+        /// framework components.</param>
+        /// <param name="container">The container.</param>
+        public static void UseSimpleInjectorAspNetRequestScoping(this IServiceCollection services,
+            Container container)
+        {
+            if (services == null)
+            {
+                throw new ArgumentNullException(nameof(services));
+            }
+
+            if (container == null)
+            {
+                throw new ArgumentNullException(nameof(container));
+            }
+
+            services.AddSingleton<IStartupFilter>(new RequestScopingStartupFilter(container));
+        }
+
+        /// <summary>
+        /// Get service of type <typeparamref name="T"/> from the list of request-specific services of the
+        /// application builder. This preserves the lifestyle of the registered component.
+        /// </summary>
+        /// <typeparam name="T"> The type of service object to get.</typeparam>
+        /// <param name="builder">The IApplicationBuilder to retrieve the service object from.</param>
+        /// <returns>A service object of type T or null if there is no such service.</returns>
+        /// <exception cref="InvalidOperationException">Thrown when the method is called outside the 
+        /// context of a web request.</exception>
+        public static T GetRequestService<T>(this IApplicationBuilder builder)
+        {
+            if (builder == null)
+            {
+                throw new ArgumentNullException(nameof(builder));
+            }
+
+            return GetRequestServiceProvider(builder).GetService<T>();
+        }
+
+        /// <summary>
+        /// Get service of type <typeparamref name="T"/> from the list of request-specific services of the
+        /// application builder. This preserves the lifestyle of the registered component.
+        /// </summary>
+        /// <typeparam name="T"> The type of service object to get.</typeparam>
+        /// <param name="builder">The IApplicationBuilder to retrieve the service object from.</param>
+        /// <returns>A service object of type T.</returns>
+        /// <exception cref="InvalidOperationException">Thrown when the method is called outside the 
+        /// context of a web request, or when there is no service of type <typeparamref name="T"/>.</exception>
+        public static T GetRequiredRequestService<T>(this IApplicationBuilder builder)
+        {
+            if (builder == null)
+            {
+                throw new ArgumentNullException(nameof(builder));
+            }
+
+            return GetRequestServiceProvider(builder).GetRequiredService<T>();
+        }
+
+        private static IServiceProvider GetRequestServiceProvider(IApplicationBuilder builder)
+        {
+            var accessor = builder.ApplicationServices.GetService<IHttpContextAccessor>();
+
+            if (accessor == null)
+            {
+                throw new InvalidOperationException(
+                    "Type 'Microsoft.AspNetCore.Http.IHttpContextAccessor' is not available in the " +
+                    "IApplicationBuilder.ApplicationServices collection. Please make sure it is " +
+                    "registered by adding it to the ConfigureServices method as follows: " + Environment.NewLine +
+                    "services.AddSingleton<IHttpContextAccessor, HttpContextAccessor>();");
+            }
+
+            var context = accessor.HttpContext;
+
+            if (context == null)
+            {
+                throw new InvalidOperationException(
+                    "No HttpContext. " +
+                    "Please make sure this method is called within the context of an active HTTP request.");
+            }
+
+            return context.RequestServices;
+        }
+
+        private sealed class RequestScopingStartupFilter : IStartupFilter
+        {
+            private readonly Container container;
+
+            public RequestScopingStartupFilter(Container container)
+            {
+                this.container = container;
+            }
+
+            public Action<IApplicationBuilder> Configure(Action<IApplicationBuilder> next)
+            {
+                return builder =>
+                {
+                    ConfigureRequestScoping(builder);
+
+                    next(builder);
+                };
+            }
+
+            private void ConfigureRequestScoping(IApplicationBuilder builder)
+            {
+                builder.Use(async (context, next) =>
+                {
+                    using (AsyncScopedLifestyle.BeginScope(container))
+                    {
+                        await next();
+                    }
+                });
+            }
         }
     }
 }
